--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,7 @@
     ~/.vim: vim/
     ~/.vimrc: vimrc
     ~/.bashrc: bashrc
+    ~/.aliases: aliases
     ~/.xmonad/xmonad.hs:
         create: true
         path: xmonad.hs
