Switching to sakura from gnome-terminal! Yay dotfile configuration =).

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,6 +16,9 @@
     ~/.xinitrc: xinitrc
     ~/.conkyrc: conkyrc
     ~/bin: bin
+    ~/.config/sakura/sakura.conf:
+        create: true
+        path: sakura.conf
 
 - shell:
   -
