Whoohoo! roxterm >> sakura, because it supports that amazing ctrl+shift+n feature from gnome-terminal/vte.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,9 +16,9 @@
     ~/.xinitrc: xinitrc
     ~/.conkyrc: conkyrc
     ~/bin: bin
-    ~/.config/sakura/sakura.conf:
+    ~/.config/roxterm.sourceforge.net:
         create: true
-        path: sakura.conf
+        path: roxterm.sourceforge.net
 
 - shell:
   -
