--- a/sakura.conf
+++ b/sakura.conf
@@ -28,7 +28,7 @@ background=none
 font=Ubuntu Mono,monospace 13
 show_always_first_tab=No
 scrollbar=false
-resize_grip=false
+resize_grip=true
 closebutton=true
 tabs_on_bottom=false
 less_questions=false
