Starting to tweak dircolors for solarized theme. See http://archlinux.me/w0ng/2012/04/21/better-dircolors-with-solarized/

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
     ~/.config/roxterm.sourceforge.net:
         create: true
         path: roxterm.sourceforge.net
+    ~/.dir_colors: dir_colors
 
 - shell:
   -
