Woohooo keyring manager I am SO COOL

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,7 @@
     /etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf:
         create: true
         path: no-suspend-on-lidswitch.conf
+    ~/.ssh/config: ssh_config
 
 - shell:
   -
