--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
     ~/.vim: vim/
     ~/.vimrc: vimrc
     ~/.bashrc: bashrc
+    ~/.bash_profile: bash_profile
     ~/.aliases: aliases
     ~/.xmonad/xmonad.hs:
         create: true
