Wowow ctrl+p and ag are a potent combination. Thanks for the tip, @fatboyxpc!

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -42,3 +42,4 @@
   -
     - git update-submodules
     - Install/update submodules
+  - (cd ~/.vim/bundle/command-t/ruby/command-t; ruby extconf.rb; make)
