Setting up termite! It's totally awesome and I cannot wait to make a convert of @fatboyxpc.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -26,6 +26,9 @@
     ~/.config/roxterm.sourceforge.net:
         create: true
         path: roxterm.sourceforge.net
+    ~/.config/termite:
+        create: true
+        path: termite
     ~/.dir_colors: dir_colors
     ~/.ssh/config:
         create: true
