--- a/20-trackpoint.conf
+++ b/20-trackpoint.conf
@@ -1,10 +1,15 @@
 Section "InputClass"
-    Identifier      "Trackpoint Wheel Emulation"
-    MatchProduct    "TPPS/2 IBM TrackPoint|DualPoint Stick|Synaptics Inc. Composite TouchPad / TrackPoint|ThinkPad USB Keyboard with TrackPoint|USB Trackpoint pointing device|Composite TouchPad / TrackPoint|PS/2 Synaptics TouchPad"
-    MatchDevicePath "/dev/input/event*"
-    Option          "EmulateWheel"       "true"
-    Option          "EmulateWheelButton" "2"
-    Option          "Emulate3Buttons"    "false"
-    Option          "XAxisMapping"       "6 7"
-    Option          "YAxisMapping"       "4 5"
+  Identifier "Trackpoint Acceleration"
+  MatchDriver "libinput"
+  MatchProduct "TPPS/2 IBM TrackPoint"
+  Option "AccelSpeed" "1"
+EndSection
+
+Section "InputClass"
+  Identifier "TouchPad Acceleration"
+  MatchDriver "libinput"
+  MatchProduct "SynPS/2 Synaptics TouchPad"
+  Option "AccelSpeed" "0.5"
+  Option "Tapping" "yes"
+  Option "TappingDragLock" "yes"
 EndSection
