--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,81 +1,127 @@
 - clean: ['~']
 
 - link:
-    ~/.dotfiles: ""
-    ~/.gitconfig: gitconfig
-    ~/.gitignore_global: gitignore_global
-    ~/.vim: vim/
-    ~/.vimrc: vimrc
-    ~/.bashrc:
+    ~/.dotfiles:
+        path: ""
         force: true
+    ~/.gitconfig:
+        path: gitconfig
+        force: true
+    ~/.gitignore_global:
+        path: gitignore_global
+        force: true
+    ~/.vim:
+        path: vim/
+        force: true
+    ~/.vimrc:
+        path: vimrc
+        force: true
+    ~/.bashrc:
         path: bashrc
-    ~/.bash_profile: bash_profile
-    ~/.aliases: aliases
+        force: true
+    ~/.bash_profile:
+        path: bash_profile
+        force: true
+    ~/.aliases:
+        path: aliases
+        force: true
     ~/.xmonad/xmonad.hs:
-        create: true
         path: xmonad.hs
-    ~/.xmobarrc: xmobarrc
-    ~/.Xmodmap: Xmodmap
-    ~/.Xresources: Xresources
-    ~/.xinitrc: xinitrc
-    ~/.conkyrc: conkyrc
-    ~/bin: bin
+        create: true
+        force: true
+    ~/.xmobarrc:
+        path: xmobarrc
+        force: true
+    ~/.Xmodmap:
+        path: Xmodmap
+        force: true
+    ~/.Xresources:
+        path: Xresources
+        force: true
+    ~/.xinitrc:
+        path: xinitrc
+        force: true
+    ~/.conkyrc:
+        path: conkyrc
+        force: true
+    ~/bin:
+        path: bin
+        force: true
     ~/.config/autorandr:
-        create: true
         path: autorandr
+        create: true
+        force: true
     ~/.config/roxterm.sourceforge.net:
-        create: true
         path: roxterm.sourceforge.net
+        create: true
+        force: true
     ~/.config/termite:
-        create: true
         path: termite
+        create: true
+        force: true
     ~/.config/dunst:
-        create: true
         path: dunst
-    ~/.dir_colors: dir_colors
-    ~/.ssh/config:
         create: true
+        force: true
+    ~/.dir_colors:
+        path: dir_colors
+        force: true
+    ~/.ssh/config:
         path: ssh_config
+        create: true
+        force: true
 
     /etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf:
-        create: true
         path: no-suspend-on-lidswitch.conf
+        create: true
+        force: true
     /etc/systemd/logind.conf.d/suspend-on-powerbutton.conf:
-        create: true
         path: suspend-on-powerbutton.conf
-    /etc/X11/xorg.conf.d/20-kaladin-intel.conf:
         create: true
+        force: true
+    /etc/X11/xorg.conf.d/20-kaladin-intel.conf:
         path: 20-kaladin-intel.conf
+        create: true
+        force: true
     # Fix trackpoint middle button scroll by creating a `/etc/X11/xorg.conf.d/20-trackpoint.conf` as per https://wiki.archlinux.org/index.php/Lenovo_ThinkPad_T410.
     /etc/X11/xorg.conf.d/20-trackpoint.conf:
-        create: true
         path: 20-trackpoint.conf
-    /etc/vconsole.conf:
         create: true
+        force: true
+    /etc/vconsole.conf:
         path: vconsole.conf
+        create: true
+        force: true
 
     /usr/lib/systemd/system/fixkeys.path:
-        create: true
         path: units/fixkeys.path
+        create: true
+        force: true
     /usr/lib/systemd/system/fixkeys.service:
-        create: true
         path: units/fixkeys.service
+        create: true
+        force: true
     /usr/lib/systemd/system/fixmouse.path:
-        create: true
         path: units/fixkeys.path
-    /usr/lib/systemd/system/fixmouse.service:
         create: true
+        force: true
+    /usr/lib/systemd/system/fixmouse.service:
         path: units/fixkeys.service
+        create: true
+        force: true
 
     /etc/udev/rules.d/10-local.rules:
-        create: true
         path: udev/10-local.rules
+        create: true
+        force: true
     /usr/lib/systemd/system/monitors.service:
-        create: true
         path: units/monitors.service
-    /etc/modprobe.d/nobeep.conf:
         create: true
+        force: true
+    /etc/modprobe.d/nobeep.conf:
         path: nobeep.conf
+        create: true
+        force: true
 
 - shell:
   -
