--- a/units/monitors.service
+++ b/units/monitors.service
@@ -5,8 +5,12 @@ Description=Refresh monitors
 Type=simple
 # https://bugs.launchpad.net/ubuntu/+source/xserver-xorg-video-intel/+bug/660901/comments/3
 Environment=XAUTHORITY=/home/jeremy/.Xauthority
+Environment=BASH_ENV=/home/jeremy/.bashrc
 Environment=DISPLAY=:0
-ExecStart=/usr/bin/su jeremy -c /home/jeremy/bin/autoperipherals
+Environment=XDG_RUNTIME_DIR=/run/user/1000
+ExecStart=/usr/bin/su jeremy -c autoperipherals
+# Don't kill child processes started by autoperipherals
+KillMode=none
 
 [Install]
 WantedBy=multi-user.target
