--- a/units/fixinputs.service
+++ b/units/fixinputs.service
@@ -1,10 +1,10 @@
+# Inspired by http://jasonwryan.com/blog/2014/01/20/udev/
+# and http://www.ocsmag.com/2015/09/02/monitoring-file-access-for-dummies/
 [Unit]
-Description=Refresh monitors
+Description=Configure external keyboard
 
 [Service]
-Type=simple
-# Don't kill child processes started by autoperipherals
-KillMode=none
+Type=oneshot
 
 # Some stuff to simulate an X11 environment running under user jeremy.
 # https://bugs.launchpad.net/ubuntu/+source/xserver-xorg-video-intel/+bug/660901/comments/3
@@ -12,7 +12,4 @@ Environment=XAUTHORITY=/home/jeremy/.Xauthority
 Environment=BASH_ENV=/home/jeremy/.bashrc
 Environment=DISPLAY=:0
 Environment=XDG_RUNTIME_DIR=/run/user/1000
-ExecStart=/usr/bin/su jeremy -c autoperipherals
-
-[Install]
-WantedBy=multi-user.target
+ExecStart=/usr/bin/su jeremy -c fixinputs
