--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -71,6 +71,10 @@
         path: ssh_config
         create: true
         force: true
+    ~/.mplayer:
+        path: mplayer
+        create: true
+        force: true
 
     /etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf:
         path: no-suspend-on-lidswitch.conf
