--- a/20-trackpoint.conf
+++ b/20-trackpoint.conf
@@ -1,7 +1,11 @@
 Section "InputClass"
   Identifier "Trackpoint Acceleration"
   MatchDriver "libinput"
-  MatchProduct "TPPS/2 IBM TrackPoint"
+  MatchProduct "TPPS/2 IBM TrackPoint|ThinkPad Compact Bluetooth Keyboard with TrackPoint"
+
+  # See https://wiki.archlinux.org/index.php/Mouse_acceleration#with_libinput.
+  MatchIsPointer "yes"
+  Option "AccelProfile" "flat"
   Option "AccelSpeed" "1"
 EndSection
 
