--- a/units/monitors.service
+++ b/units/monitors.service
@@ -12,7 +12,7 @@ Environment=XAUTHORITY=/home/jeremy/.Xauthority
 Environment=BASH_ENV=/home/jeremy/.bashrc
 Environment=DISPLAY=:0
 Environment=XDG_RUNTIME_DIR=/run/user/1000
-ExecStart=/usr/bin/su jeremy -c autoperipherals
+ExecStart=/usr/bin/su jeremy --shell /usr/bin/bash -c autoperipherals
 
 [Install]
 WantedBy=multi-user.target
