Turns out that Linux 4.15 changed the name of my laptop's trackpoint.
Previous it was "TPPS/2 IBM TrackPoint", and now it's "TPPS/2 Elan
TrackPoint". See the notes of my investigation
here: https://gist.github.com/jfly/895a0a599be19ecf5f3e66bb73a5f47c.

--- a/20-trackpoint.conf
+++ b/20-trackpoint.conf
@@ -1,7 +1,7 @@
 Section "InputClass"
   Identifier "Trackpoint Acceleration"
   MatchDriver "libinput"
-  MatchProduct "TPPS/2 IBM TrackPoint|ThinkPad Compact Bluetooth Keyboard with TrackPoint"
+  MatchProduct "TPPS/2 IBM TrackPoint|TPPS/2 Elan TrackPoint|ThinkPad Compact Bluetooth Keyboard with TrackPoint"
 
   # See https://wiki.archlinux.org/index.php/Mouse_acceleration#with_libinput.
   MatchIsPointer "yes"
