--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -43,9 +43,10 @@
     /etc/X11/xorg.conf.d/20-intel.conf: 20-intel.conf
     /etc/X11/xorg.conf.d/20-trackpoint.conf: 20-trackpoint.conf
 
-    /usr/lib/systemd/system/fixinputs.path: units/fixinputs.path
-    /usr/lib/systemd/system/fixinputs.service: units/fixinputs.service
+    /etc/systemd/system/fixinputs.path: units/fixinputs.path
+    /etc/systemd/system/fixinputs.service: units/fixinputs.service
     /etc/systemd/system/slock@.service: units/slock@.service
+    /etc/systemd/system/disable-bt-wakeup.service: units/disable-bt-wakeup.service
 
     /etc/udev/rules.d/10-local.rules: udev/10-local.rules
     /usr/lib/systemd/system/monitors.service: units/monitors.service
