Wrap lines in jupyter.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -35,6 +35,7 @@
     ~/.ssh: ~/Dropbox/linux-secrets/kaladin-ssh
     ~/.gnupg: ~/Dropbox/linux-secrets/gnupg
     ~/.lolcommits: ~/Dropbox/pics/lolcommits
+    ~/.jupyter: jupyter
 
     /etc/modprobe.d/nobeep.conf: nobeep.conf
     /etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf: no-suspend-on-lidswitch.conf
