Enable bluetooth on boot.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -37,13 +37,8 @@
     ~/.lolcommits: ~/Dropbox/pics/lolcommits
     ~/.jupyter/nbconfig: jupyter/nbconfig
 
-    /etc/modprobe.d/nobeep.conf: nobeep.conf
     /etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf: no-suspend-on-lidswitch.conf
     /etc/systemd/logind.conf.d/suspend-on-powerbutton.conf: suspend-on-powerbutton.conf
-    /etc/vconsole.conf: vconsole.conf
-    /etc/X11/xorg.conf.d/20-intel.conf: 20-intel.conf
-    /etc/X11/xorg.conf.d/20-trackpoint.conf: 20-trackpoint.conf
-
     /etc/systemd/system/fixinputs.path: units/fixinputs.path
     /etc/systemd/system/fixinputs.service: units/fixinputs.service
     /etc/systemd/system/slock@.service: units/slock@.service
@@ -52,6 +47,12 @@
     /etc/udev/rules.d/10-local.rules: udev/10-local.rules
     /usr/lib/systemd/system/monitors.service: units/monitors.service
 
+    /etc/X11/xorg.conf.d/20-intel.conf: 20-intel.conf
+    /etc/X11/xorg.conf.d/20-trackpoint.conf: 20-trackpoint.conf
+
+    /etc/bluetooth/main.conf: etc_bluetooth_main.conf
+    /etc/modprobe.d/nobeep.conf: nobeep.conf
+    /etc/vconsole.conf: vconsole.conf
     /etc/pacman.d/hooks/99-secureboot.hook: pac-hooks/99-secureboot.hook
 
 - shell:
