--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -53,6 +53,7 @@
     /etc/bluetooth/main.conf: etc_bluetooth_main.conf
     /etc/modprobe.d/nobeep.conf: nobeep.conf
     /etc/vconsole.conf: vconsole.conf
+    /etc/locale.conf: locale.conf
     /etc/pacman.d/hooks/99-secureboot.hook: pac-hooks/99-secureboot.hook
 
 - shell:
