Oh new linux kernel, new device names...

--- a/20-trackpoint.conf
+++ b/20-trackpoint.conf
@@ -12,8 +12,8 @@ EndSection
 Section "InputClass"
   Identifier "TouchPad Acceleration"
   MatchDriver "libinput"
-  MatchProduct "SynPS/2 Synaptics TouchPad"
-  Option "AccelSpeed" "0.5"
+  MatchProduct "Synaptics TM3289-002"
+  Option "AccelSpeed" "0.0"
   Option "Tapping" "yes"
   Option "TappingDragLock" "yes"
 EndSection
