WIP WIP WIP TODO this isn't working yet

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -39,6 +39,7 @@
     ~/.lolcommits: ~/Dropbox/pics/lolcommits
 
     /usr/share/themes/jfattymacs: gtk-themes/jfattymacs
+    /usr/share/polkit-1/rules.d/blueman.rules: polkit-rules/blueman.rules
 
     /etc/fuse.conf: fuse.conf
 
