--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
     ~/.config/termite: termite
     ~/.config/dunst: dunst
     ~/.config/gtk-3.0: gtk-3.0
+    ~/.config/pirate-get: pirate-get
     ~/.dir_colors: dir_colors
     ~/.direnvrc: direnvrc
     ~/.gitconfig: gitconfig
