systemd 242 seems to be ignoring symlink-ed conf files.
This is a workaround for https://github.com/systemd/systemd/issues/12410.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -46,8 +46,6 @@
     /etc/fuse.conf: etc/fuse.conf
     /etc/nsswitch.conf: etc/nsswitch.conf
 
-    /etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf: etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf
-    /etc/systemd/logind.conf.d/suspend-on-powerbutton.conf: etc/systemd/logind.conf.d/suspend-on-powerbutton.conf
     /etc/systemd/system/fixinputs@.path: etc/systemd/system/fixinputs@.path
     /etc/systemd/system/fixinputs@.service: etc/systemd/system/fixinputs@.service
     /etc/systemd/system/slock@.service: etc/systemd/system/slock@.service
@@ -68,3 +66,5 @@
   - [git update-submodules, Install/update submodules]
   - ["chmod -R u=rwX,og= ~/.ssh/", Fix ssh key permissions]
   - ["chmod -R u=rwX,og= ~/.gnupg/", Fix gnupg permissions]
+  - sudo cp etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf /etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf
+  - sudo cp etc/systemd/logind.conf.d/suspend-on-powerbutton.conf /etc/systemd/logind.conf.d/suspend-on-powerbutton.conf
