Finally configure docker detachKeys!
This gets ctrl+p and ctrl+n working as I'd expect when inside of a
container.

This was so darn tricky to do because by default, docker stores
credentials in the `.docker/config.json` file. You have to configure a
`credsStore` to avoid that. Dumping all the tabs I have open:

  - https://docs.docker.com/engine/reference/commandline/login/#credential-helpers
  - https://aur.archlinux.org/packages/docker-credential-secretservice/
  - https://www.antoniojgutierrez.com/2018/08/11/docker_login_password_store.html
  - https://github.com/docker/docker-credential-helpers

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
     ~/.config/gtk-3.0: config/gtk-3.0
     ~/.config/pirate-get: config/pirate-get
     ~/.config/fontconfig: config/fontconfig
+    ~/.docker/config.json: docker/config.json
     ~/.dir_colors: dir_colors
     ~/.gitconfig: gitconfig
     ~/.gitignore_global: gitignore_global
