--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,7 @@
     ~/.config/pirate-get: config/pirate-get
     ~/.config/fontconfig: config/fontconfig
     ~/.docker/config.json: docker/config.json
+    ~/.dosbox: dosbox
     ~/.dir_colors: dir_colors
     ~/.gitconfig: gitconfig
     ~/.gitignore_global: gitignore_global
