--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -28,6 +28,9 @@
     ~/.gitconfig: gitconfig
     ~/.gitignore_global: gitignore_global
     ~/.jupyter/nbconfig: jupyter/nbconfig
+    ~/.kodi/userdata/guisettings.xml: kodi/userdata/guisettings.xml
+    ~/.kodi/userdata/sources.xml: kodi/userdata/sources.xml
+    ~/.kodi/userdata/keymaps: kodi/userdata/keymaps
     ~/.mplayer: mplayer
     ~/.ssh/config: ssh/config
     ~/.vim: vim
