--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,9 +22,10 @@
     ~/.config/gtk-3.0: config/gtk-3.0
     ~/.config/pirate-get: config/pirate-get
     ~/.config/fontconfig: config/fontconfig
+    ~/.direnvrc: direnvrc
+    ~/.dir_colors: dir_colors
     ~/.docker/config.json: docker/config.json
     ~/.dosbox: dosbox
-    ~/.dir_colors: dir_colors
     ~/.gitconfig: gitconfig
     ~/.gitignore_global: gitignore_global
     ~/.jupyter/nbconfig: jupyter/nbconfig
