Wow sonic provides ssh... I wonder what to use this for?

--- a/ssh/config
+++ b/ssh/config
@@ -49,6 +49,10 @@ HostName 34.82.48.146
 User jeremyfleischman
 #LocalForward 8080 localhost:8080
 
+Host sonic
+User jfly
+HostName sh.sonic.net
+
 ### Honor stuff
 Host bastion.honordev.com bastion
 Hostname bastion.honordev.com
