--- a/ssh/config
+++ b/ssh/config
@@ -49,6 +49,11 @@ HostName 34.82.48.146
 User jeremyfleischman
 #LocalForward 8080 localhost:8080
 
+# Asus router @ Snowdon
+Host strider
+HostName 192.168.1.1
+User admin
+
 Host sonic
 User jfly
 HostName sh.sonic.net
